fix: Fix integration tests and improve code quality
Fixed all failing integration tests and applied code quality improvements:

**Test Fixes:**
- Fixed cascade delete tests by adding entityManager.clear() after flush
- Corrected AuthController test expectation (404 instead of 500 for user not found)
- Fixed optional fields JSON test (use doesNotExist() instead of isEmpty())
- Added proper authentication to ReviewControllerTest with .with(user())

**Code Quality Improvements:**
- Replaced .get(0) with .getFirst() across all test files (Java 21 idiom)
- Fixed @ActiveProfiles import (was using full class name)
- Removed unnecessary @WithMockUser annotations
- Fixed duplicate .with(authenticated()) calls
- Added blank line before closing bracket in DomainExceptionTest

**Documentation & Directives:**
- Added "Command Execution Guidelines" for token efficiency
- Updated all commands to use quiet mode (-q, --quiet-pull)
- Added 4 new coding standards to CLAUDE.md
- Documented session learnings and solutions

**Test Results:**
✅ 82 tests passing (46 unit + 36 integration)

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>